--- a/templates/src/package.json
+++ b/templates/src/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "svelte": "^3.12.1",
+    "svelte-loader": "^2.13.6",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
   }
