--- a/templates/src/package.json
+++ b/templates/src/package.json
@@ -3,6 +3,7 @@
     "build": "webpack"
   },
   "dependencies": {
+    "stimulus": "^1.1.1",
     "svelte": "^3.12.1",
     "svelte-loader": "^2.13.6",
     "webpack": "^4.41.0",
